# fontvuer

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vue.config.js
.github/workflows/: release.yml
app/: index.html  package.json  vite.config.ts
app/src/: App.svelte  app.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: font.rs  main.rs
app/src/components/: DisplayFont.svelte  Loading.svelte
app/src/lib/: ipc.ts
app/src/lib/db/: face.ts  family.ts  file.ts  index.ts  schema.ts  utils.ts
app/src/lib/setup/: index.ts
app/src/lib/store/: families.ts  index.ts  setup.ts  utils.ts
app/src/lib/utils/: index.ts  snakeToCamel.spec.ts  snakeToCamel.ts  waitForIdle.ts
public/: index.html
screenshots/: README.md
src/: App.svelte  App.vue  background.ts  constants.ts  font-manager.d.ts  fonts.ts  main.ts  shims-vue.d.ts  store.ts  type.ts  types.ts  update-checker.ts  util.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  source.rs
src/components/: CloseButton.svelte  CustomInput.vue  CustomSelect.vue  Font.svelte  FontCard.svelte  FontDetail.svelte  FontDetail.vue  FontList.vue  FontView.vue  HeaderItem.vue  Loading.vue  Modal.vue  SideOverlay.svelte  StarButton.vue  VCopyBtn.vue  VFontCard.vue  VFontDetailCard.vue  VFontList.vue  VHeader.vue  VSearch.vue  VSettings.vue  VToggleBtn.vue
src/lib/: fonts.ts  ipc.ts  loader.ts  transition.ts
src/plugins/: vuetify.ts
