[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "1.0.0-rc.2", features = [] }

[dependencies]
base64 = "0.13.0"
font-kit = {git = "https://github.com/ssssota/font-kit.git", rev = "c74e7478b91f12c3137fb268b554b534b07d3b1c"}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.0-rc.2", features = ["api-all"] }
ttf-name-decoder = {git = "https://github.com/ssssota/ttf_name_decoder.git"}
ttf-parser = "0.14.0"
walkdir = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
