[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = "1.0.0-rc.4"

[dependencies]
base64 = "0.13.0"
font-kit = {git = "https://github.com/ssssota/font-kit.git", rev = "c5d48e1c4bf96b80a5f687b742d3f84cad28dd82"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.0.0-rc.4", features = ["api-all"]}
ttf-name-decoder = "0.1"
ttf-parser = "0.15.0"
walkdir = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
